# Image-Processor

./: CMakeLists.txt  README.md  cmd_line_args_parser.cpp  cmd_line_args_parser.h  help.h  image_processor.cpp
filter_makers/: crop_filter_cmd_args_maker.cpp  crop_filter_cmd_args_maker.h  edge_detection_filter_cmd_args_maker.cpp  edge_detection_filter_cmd_args_maker.h  grayscale_filter_cmd_args_maker.cpp  grayscale_filter_cmd_args_maker.h  negative_filter_cmd_args_maker.cpp  negative_filter_cmd_args_maker.h  sharpening_filter_cmd_args_maker.cpp  sharpening_filter_cmd_args_maker.h  solarize_filter_cmd_args_maker.cpp  solarize_filter_cmd_args_maker.h
filters/: crop_filter.cpp  crop_filter.h  edge_detection_filter.cpp  edge_detection_filter.h  grayscale_filter.cpp  grayscale_filter.h  negative_filter.cpp  negative_filter.h  sharpening_filter.cpp  sharpening_filter.h  solarize_filter.cpp  solarize_filter.h
filters_base/: filter.h  filtercreators.cpp  filtercreators.h  filterpipeline.cpp  filterpipeline.h  matrix_filter.cpp  matrix_filter.h
image/: color.cpp  color.h  dib.cpp  dib.h  matrix.h
my_tests/: test_bmp.cpp  test_color.cpp  test_matrix.cpp
